spacing and button bg fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,100 +3,99 @@
 @tailwind utilities;
 
 @layer base {
-    :root {
-        --background: 0 0% 100%;
-        --foreground: 222.2 84% 4.9%;
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 222.2 84% 4.9%;
 
-        --card: 0 0% 100%;
-        --card-foreground: 222.2 84% 4.9%;
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 84% 4.9%;
 
-        --popover: 0 0% 100%;
-        --popover-foreground: 222.2 84% 4.9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
 
-        --primary: 222.2 47.4% 11.2%;
-        --primary-foreground: 210 40% 98%;
+    --primary: 222.2 47.4% 11.2%;
+    --primary-foreground: 210 40% 98%;
 
-        --secondary: 210 40% 96.1%;
-        --secondary-foreground: 222.2 47.4% 11.2%;
+    --secondary: 210 40% 96.1%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
 
-        --muted: 210 40% 96.1%;
-        --muted-foreground: 215.4 16.3% 46.9%;
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
 
-        --accent: 210 40% 96.1%;
-        --accent-foreground: 222.2 47.4% 11.2%;
+    --accent: 210 40% 96.1%;
+    --accent-foreground: 222.2 47.4% 11.2%;
 
-        --destructive: 0 84.2% 60.2%;
-        --destructive-foreground: 210 40% 98%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 40% 98%;
 
-        --border: 214.3 31.8% 91.4%;
-        --input: 214.3 31.8% 91.4%;
-        --ring: 222.2 84% 4.9%;
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+    --ring: 222.2 84% 4.9%;
 
-        --radius: 0.5rem;
-    }
+    --radius: 0.5rem;
+  }
 
-    .dark {
-        --background: 222.2 84% 4.9%;
-        --foreground: 210 40% 98%;
+  .dark {
+    --background: 222.2 84% 4.9%;
+    --foreground: 210 40% 98%;
 
-        --card: 222.2 84% 4.9%;
-        --card-foreground: 210 40% 98%;
+    --card: 222.2 84% 4.9%;
+    --card-foreground: 210 40% 98%;
 
-        --popover: 222.2 84% 4.9%;
-        --popover-foreground: 210 40% 98%;
+    --popover: 222.2 84% 4.9%;
+    --popover-foreground: 210 40% 98%;
 
-        --primary: 210 40% 98%;
-        --primary-foreground: 222.2 47.4% 11.2%;
+    --primary: 210 40% 98%;
+    --primary-foreground: 222.2 47.4% 11.2%;
 
-        --secondary: 217.2 32.6% 17.5%;
-        --secondary-foreground: 210 40% 98%;
+    --secondary: 217.2 32.6% 17.5%;
+    --secondary-foreground: 210 40% 98%;
 
-        --muted: 217.2 32.6% 17.5%;
-        --muted-foreground: 215 20.2% 65.1%;
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 20.2% 65.1%;
 
-        --accent: 217.2 32.6% 17.5%;
-        --accent-foreground: 210 40% 98%;
+    --accent: 217.2 32.6% 17.5%;
+    --accent-foreground: 210 40% 98%;
 
-        --destructive: 0 62.8% 30.6%;
-        --destructive-foreground: 210 40% 98%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 210 40% 98%;
 
-        --border: 217.2 32.6% 17.5%;
-        --input: 217.2 32.6% 17.5%;
-        --ring: 212.7 26.8% 83.9%;
-    }
+    --border: 217.2 32.6% 17.5%;
+    --input: 217.2 32.6% 17.5%;
+    --ring: 212.7 26.8% 83.9%;
+  }
 }
 
 @layer base {
-    * {
-        @apply border-border;
-    }
-    body {
-        @apply bg-background text-foreground;
-    }
-    *::selection {
-        @apply bg-primary-main bg-opacity-80 text-white;
-    }
+  *::selection {
+    @apply bg-primary-main bg-opacity-80 text-white;
+  }
 
-    * {
-        scroll-behavior: smooth;
-    }
+  * {
+    scroll-behavior: smooth;
+    @apply border-border;
+  }
 
-    body {
-        @apply bg-white dark:bg-gray-900 text-gray-900 dark:text-white relative;
-    }
+  body {
+    @apply bg-white dark:bg-gray-900 text-gray-900 dark:text-white relative bg-background text-foreground;
+  }
 
-    .btn {
-        @apply bg-primary-main text-white border-2 px-4 py-2 rounded-full hover:bg-primary-dark dark:hover:bg-transparent dark:border-primary-main dark:hover:border-primary-main dark:hover:border-2;
-    }
+  .btn {
+    @apply bg-primary-main text-white border-2 px-4 py-2 rounded-full hover:bg-primary-dark dark:hover:bg-transparent dark:border-primary-main dark:hover:border-primary-main dark:hover:border-2;
+  }
 
-    .btn-bordered {
-        @apply bg-transparent border-primary-main border-2 text-primary-main px-4 py-2 rounded-full dark:text-white hover:bg-primary-main hover:text-white dark:hover:bg-primary-main;
-    }
+  .btn-bordered {
+    @apply bg-white dark:bg-gray-900 border-primary-main border-2 text-primary-main px-4 py-2 rounded-full dark:text-white hover:bg-primary-main hover:text-white dark:hover:bg-primary-main;
+  }
 
-    .text-gradient {
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        background-clip: text;
-        background-image: linear-gradient(181deg, #16a34a, #a4d0b4);
-    }
+  .text-gradient {
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    background-image: linear-gradient(181deg, #16a34a, #a4d0b4);
+  }
+
+  .input {
+    @apply w-full bg-gray-100 bg-opacity-40 dark:bg-gray-700 dark:bg-opacity-40 border-b-2 border-gray-300 p-1 focus:outline-0 focus:border-gray-800 mb-3;
+  }
 }
